--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
             </li>
           </ul>
         </address>
+        <button class="open-menu" type="button">
+          <svg width="24" height="24">
+            <use href="./images/icons.svg#icon-menu"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <!-- Main -->
@@ -477,7 +482,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button type="button" class="button-x">
           <svg class="button-icon" width="8" height="8">
