--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="text-item">
+            <li class="text-item no-text">
               <div class="text-box">
                 <svg class="text-svg" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut"></use>
@@ -125,11 +125,15 @@
       </section>
       <!-- section#3 -->
       <section class="team">
-        <div class="container">
+        <div class="container container-team">
           <h2 class="subtitle">Our Team</h2>
           <ul class="team-list">
             <li class="team-item">
               <img
+                srcset="
+                  ./images/team-photo-1.jpg 1x,
+                  ./images/team-photo-1.jpg 2x
+                "
                 src="./images/team-photo-1.jpg"
                 alt="Mark Guerrero"
                 width="264"
@@ -172,6 +176,10 @@
             </li>
             <li class="team-item">
               <img
+                srcset="
+                  ./images/team-photo-2.jpg 1x,
+                  ./images/team-photo-2.jpg 2x
+                "
                 src="./images/team-photo-2.jpg"
                 alt="Tom Ford"
                 width="264"
@@ -214,6 +222,10 @@
             </li>
             <li class="team-item">
               <img
+                srcset="
+                  ./images/team-photo-3.jpg 1x,
+                  ./images/team-photo-3.jpg 2x
+                "
                 src="./images/team-photo-3.jpg"
                 alt="Camila Garcia"
                 width="264"
@@ -256,6 +268,10 @@
             </li>
             <li class="team-item">
               <img
+                srcset="
+                  ./images/team-photo-4.jpg 1x,
+                  ./images/team-photo-4.jpg 2x
+                "
                 src="./images/team-photo-4.jpg"
                 alt="Daniel Wilson"
                 width="264"
@@ -307,6 +323,10 @@
             <li class="product-item">
               <div class="product-img">
                 <img
+                  srcset="
+                    ./images/Product-img-1.jpg 1x,
+                    ./images/Product-img-1.jpg 2x
+                  "
                   src="./images/Product-img-1.jpg"
                   alt="Banking App"
                   width="360"
@@ -325,6 +345,10 @@
             <li class="product-item">
               <div class="product-img">
                 <img
+                  srcset="
+                    ./images/Product-img-2.jpg 1x,
+                    ./images/Product-img-2.jpg 2x
+                  "
                   src="./images/Product-img-2.jpg"
                   alt="Banking App"
                   width="360"
@@ -343,6 +367,10 @@
             <li class="product-item">
               <div class="product-img">
                 <img
+                  srcset="
+                    ./images/Product-img-3.jpg 1x,
+                    ./images/Product-img-3.jpg 2x
+                  "
                   src="./images/Product-img-3.jpg"
                   alt="Meditaion App"
                   width="360"
@@ -361,6 +389,10 @@
             <li class="product-item">
               <div class="product-img">
                 <img
+                  srcset="
+                    ./images/Product-img-4.jpg 1x,
+                    ./images/Product-img-4.jpg 2x
+                  "
                   src="./images/Product-img-4.jpg"
                   alt="Taxi Service"
                   width="360"
