--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li cl>
               <a href="tel:+110001111111" class="contact"
                 >+11 (000) 111-11-11</a
               >
@@ -592,6 +592,66 @@
           </div>
           <button type="submit" class="modal-button">Send</button>
         </form>
+      </div>
+    </div>
+    <div class="backdrop">
+      <div class="menu-box is-open">
+        <button type="button" class="button-x">
+          <svg class="button-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <ul class="menu-list">
+          <li class="menu-item">
+            <a href="./index.html" class="menu-studio blue-studio">Studio</a>
+          </li>
+          <li class="menu-item">
+            <a href="" class="menu-studio">Portfolio</a>
+          </li>
+          <li class="menu-item"><a href="" class="menu-studio">Contacts</a></li>
+        </ul>
+        <ul class="menu-adress">
+          <li class="adress-item">
+            <a href="+11 (000) 111-11-11" class="menu-tel-style"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+          <li class="address-item">
+            <a href="info@devstudio.com" class="menu-email-style"
+              >info@devstudio.com</a
+            >
+          </li>
+        </ul>
+        <ul class="menu-box-list">
+          <li class="box-icon">
+            <a href="" class="box-link">
+              <svg class="team-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="box-icon">
+            <a href="" class="box-link">
+              <svg class="team-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="box-icon">
+            <a href="" class="box-link">
+              <svg class="team-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="box-icon">
+            <a href="" class="box-link">
+              <svg class="team-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
   </body>
