--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
                 width="264"
                 height="260"
               />
+
               <div class="team-box">
                 <h3 class="team-h">Mark Guerrero</h3>
                 <p class="team-p">Product Designer</p>
@@ -595,7 +596,7 @@
       </div>
     </div>
     <div class="backdrop">
-      <div class="menu-box is-open">
+      <div class="menu-box">
         <button type="button" class="button-x">
           <svg class="button-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
